# activation_additions_hf

./: .gitignore  README.md  pyproject.toml  setup.cfg
activation_additions/: __init__.py  compat.py  utils.py
ave/: __init__.py  compat.py
notebooks/: Qualitative-LLAMA.ipynb  playground.ipynb  qualitative.ipynb  research.ipynb
tests/: test_additions.py  test_ave.py  test_hello.py
