[metadata]
name = activation_additions
version = 0.0.1
description = "activation_additions is a concise (<100loc) implementation of Team Shard's activation value editing technique in PyTorch."
author = Ulisse Mini
author_email = ulisse.mini@gmail.com

[options]
packages =
    activation_additions

[options.extras_require]
transformers = transformers >= 4.28.0
pytest = pytest >= 7.3.1
